# embed-kit

./: .gitignore  AGENT.md  README.md  pyproject.toml
config/: models.yaml  settings.yaml
src/embed_kit/: cli.py  main.py
src/embed_kit/api/: __init__.py  routes.py  schemas.py
src/embed_kit/models/: __init__.py  embedding.py  registry.py
src/embed_kit/models/adapters/: __init__.py  base.py  bge_m3.py  registry.py
src/embed_kit/models/handler/: __init__.py  base.py  embedding.py  schemas.py
src/embed_kit/utils/: config.py  logger.py
test/: test_api.py
