[project]
name = "embed-kit"
version = "0.1.0"
description = "A flexible FastAPI-based model API service with CLI and Docker support"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "flagembedding>=1.4.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "click>=8.1.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0.1",
]

[project.scripts]
embed-kit = "embed_kit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/embed_kit"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12.8"
strict = true
